# BenchSuite

./: .envrc  README.md  main.py  pyproject.toml  singularity_container
.github/workflows/: deploy.yml
benchsuite/: __init__.py  benchmark.py  benchmarks.py  lasso.py  lasso_dna.py  lunarlander.py  maxsat.py  mopta08.py  mujoco.py  svm.py
benchsuite/ebo/: __init__.py  mpd_rover.py  registry.py  rover.py
benchsuite/lasso/: __init__.py  lasso.py
benchsuite/mujoco/: __init__.py  mujoco.py
benchsuite/other/: __init__.py  mopta.py  registry.py  svm.py
benchsuite/utils/: mujoco.py
data/svm/: CT_slice_y.npy.tgz
recipes/: ebo_container  lasso_container  mujoco_container  other_container
