[tool.poetry]
name = "benchsuite"
version = "0.1.0"
description = ""
authors = ["Leonard Papenmeier <leonard.papenmeier@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
LassoBench = { git = "https://github.com/ksehic/LassoBench.git#egg=LassoBench" }
numpy = "~1.21"
torch = "^1.13"
scikit-learn = "~1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
