[tool.poetry]
name = "benchsuite"
version = "0.1.0"
description = ""
authors = ["Leonard Papenmeier <leonard.papenmeier@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
LassoBench = { git = "https://github.com/ksehic/LassoBench.git#egg=LassoBench" }
ebo = { git = "https://github.com/LeoIV/Ensemble-Bayesian-Optimization.git" }
numpy = "~1.21"
torch = "^1.13"
scikit-learn = "~1.2"
gym = "~0.24"
box2d = "^2.3.10"
box2d-py = "^2.3.8"
mujoco-py = { git = "https://github.com/LeoIV/mujoco-py.git" }
mujoco = "2.2.2"
python-sat = "^0.1.7.dev26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
