[tool.poetry]
name = "benchsuite"
version = "0.1.0"
description = ""
authors = ["Leonard Papenmeier <leonard.papenmeier@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
LassoBench = { git = "https://github.com/ksehic/LassoBench.git#egg=LassoBench" }
ebo = { git = "https://github.com/LeoIV/Ensemble-Bayesian-Optimization.git" }
numpy = "~1.21"
torch = "^1.13"
scikit-learn = "~1.2"
gym = "~0.24"
python-sat = "^0.1.7.dev26"
GPy = "1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
